[tool.poetry]
name = "populationsim"
version = "0.1.0"
description = ""
authors = ["Jade Mackay <jademackay@gmail.com>"]
readme = "README.md"
packages = [
    { include = "populationsim" },
]

[tool.poetry.dependencies]
python = "^3.10"
activitysim = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
